syntax = "proto3";
package bcos.sync;

message BlockSyncMessage
{
    // the basic fields
    int32 version = 1;
    int32 packetType = 2;
    int64 number = 3;

    // for sync status
    bytes hash = 4;
    bytes genesisHash = 5;

    // for blocks sync
    int64 size = 6;
    repeated bytes blocksData = 7;

    //for time sync
    int64 time = 8;
    int64 archived_number = 9;

    //for block sync optimize
    int64 block_interval = 10;
    int32 block_data_flag = 11;
}